--- a/FrontEnd/ControleDeCustos/src/app/departamento/departamento.component.html
+++ b/FrontEnd/ControleDeCustos/src/app/departamento/departamento.component.html
@@ -1,3 +1,55 @@
-<p>
-  departamento works!
-</p>
+<section class="content">
+  <div class="row">
+    <!-- left column -->
+    <div class="col-md-6">
+      <div class="box box-success">
+        <div class="box-header with-border">
+          <h3 class="box-title">Cadastrar departamento</h3>
+        </div>
+        <div class="box-body">
+          <form [formGroup]="departamentoForm" novalidate>
+            <div class="form-group" [ngClass]="{'has-error': (!departamentoForm.valid && (departamentoForm.dirty || departamentoForm.touched)) , 'has-success': (departamentoForm.valid && (departamentoForm.dirty || departamentoForm.touched))} ">
+              <label for="exampleInputEmail1">Departamento</label>
+              <input type="email" class="form-control" placeholder="Nome do departamento" formControlName="nome">
+              <label class="control-label" *ngIf="(departamentoForm.valid && (departamentoForm.dirty || departamentoForm.touched))" for="inputSuccess"><i class="fa fa-check"></i> OK</label>
+              <label class="control-label" *ngIf="(!departamentoForm.valid && (departamentoForm.dirty || departamentoForm.touched))" for="inputError"><i class="fa fa-times-circle-o"></i> Campo deve conter 2 a 100 caracteres</label>
+            </div>
+          </form>
+        </div>
+        <div class="box-footer">
+          <button type="submit" (click)="limparCampos()" class="btn btn-danger">Cancelar</button>
+          <button type="submit" (click)="registrarDepartamento()" [disabled]='!departamentoForm.valid' class="btn btn-success pull-right">Cadastrar</button>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="box box-success">
+        <div class="box-header">
+          <h3 class="box-title">Departamentos cadastrados</h3>
+
+          <!-- <div class="box-tools">
+                <div class="input-group input-group-sm" style="width: 150px;">
+                  <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+
+                  <div class="input-group-btn">
+                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                  </div>
+                </div>
+              </div> -->
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body table-responsive no-padding">
+          <table class="table table-hover">
+            <tr>
+              <th>Nome dos departamentos</th>
+            </tr>
+            <tr *ngFor="let departamento of departamentos">
+              <td>{{departamento?.nome}}</td>
+            </tr>
+          </table>
+        </div>
+        <!-- /.box-body -->
+      </div>
+    </div>
+  </div>
+</section>
