--- a/FrontEnd/ControleDeCustos/src/app/funcionario/funcionario.component.html
+++ b/FrontEnd/ControleDeCustos/src/app/funcionario/funcionario.component.html
@@ -70,14 +70,15 @@
           </div>
           <!-- /.box-header -->
           <div class="box-body table-responsive no-padding">
-            <table class="table table-hover">
+            <table class="table table-hover" *ngFor="let funcionario of funcionarios">
               <tr>
-                <th>Nome dos funcionarios</th>
+                <th>{{funcionario?.nome}}</th>
               </tr>
-              <tr *ngFor="let funcionario of funcionarios">
-                <td>{{funcionario?.nome}}</td>
+              <tr *ngFor="let departamento of funcionario.departamentos">
+                <td>{{departamento?.nome}}</td>
               </tr>
             </table>
+            
           </div>
           <!-- /.box-body -->
         </div>
