--- a/FrontEnd/ControleDeCustos/src/app/home/home.component.html
+++ b/FrontEnd/ControleDeCustos/src/app/home/home.component.html
@@ -9,7 +9,12 @@
            <p>
              Sistema para auxilio de controle de custo!
            </p>
+           <p>
+            Usuario logado: {{usuario}}
+          </p>
+           <a class="btn btn-app" (click)="logoff()">
+            <i class="fa fa-power-off"></i> Logoff
+          </a>
         </div>
-
       </section>
       <!-- FIM DO CONTEÚDO -->
