--- a/FrontEnd/ControleDeCustos/src/app/app.component.html
+++ b/FrontEnd/ControleDeCustos/src/app/app.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
   
-    <!-- <mt-snackbar></mt-snackbar> -->
+    <app-notificacao></app-notificacao>
   
     <footer class="main-footer">
       <div class="container">
